# AwsCLITool

./: .gitignore  README.md  pyproject.toml
awscli/: aws_s3.py  main.py
